--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,14 @@
 language: php
 php:
-  - "7.1"
-  - "7.0"
-  - "5.6"
-  - "5.5"
-  - "5.4"
-  - "5.3"
-before_script:
-  - composer self-update
-  - composer install --prefer-source --no-interaction --dev
+  - 7.1
+  - 7.0
+  - 5.6
+  - 5.5
+  - 5.4
+  - 5.3
+install:
+  - composer install
+script:
+  - phpunit --coverage-clover build/logs/clover.xml
+after_success:
+  - travis_retry vendor/bin/coveralls -v
